# rmicro_fw_examples

./: .gitignore  Cargo.toml  fw_micro.md
agg_api/: Cargo.toml
agg_api/src/: lib.rs  route.rs  service.rs  state.rs
agg_api/src/config/: static_config.rs
agg_api/src/route/: order_agg.rs
agg_api/src/rpc/: holder.rs
agg_api/src/service/: order_agg_svc.rs
agg_api/src/state/: app_state.rs  order_agg_state.rs
auth_api/: Cargo.toml
auth_api/src/: lib.rs  rpc.rs
auth_api/src/config/: static_config.rs
auth_api/src/rpc/: auth_info.rs  route.rs
conf/: agg_api.yaml  auth_api.yaml  gateway_api.yaml  order_api.yaml  user_api.yaml
gateway_api/: Cargo.toml
gateway_api/src/: config.rs  context.rs  hook.rs  lib.rs  rpc.rs  state.rs
order_api/: Cargo.toml
order_api/src/: config.rs  lib.rs  route.rs  rpc.rs  state.rs
order_api/src/config/: static_config.rs
order_api/src/route/: order.rs
order_api/src/rpc/: order_info.rs  srv_route.rs
proto/: auth_api.proto  order_api.proto  user_api.proto
proto_bin/: Cargo.toml  build.rs
proto_bin/src/: lib.rs
user_api/: Cargo.toml
user_api/src/: config.rs  lib.rs  model.rs  route.rs  rpc.rs
user_api/src/config/: dynamic_listen.rs  static_config.rs
user_api/src/model/sql_mod/: user.rs
user_api/src/repository/: user_repository.rs
user_api/src/route/: user.rs
user_api/src/rpc/: svc_route.rs  user_info.rs  user_security.rs
user_api/src/service/: user_info.rs
user_api/src/state/: app_state.rs  user_state.rs
